[package]
name = "true-random-on-ton"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
hex = "0.4.3"
log = { version = "0.4.27", features = ["serde"] }
num-bigint = "0.4.6"
pretty_env_logger = "0.5.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.216", features = ["derive"] }
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
vrf-r255 = "0.1.0"
warp = "0.3.7"
